--- a/initializr-web/src/main/resources/templates/home.html
+++ b/initializr-web/src/main/resources/templates/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Spring Initializr</title>
+    <title>Dev Portal</title>
     <link href="//fonts.googleapis.com/css?family=Varela+Round|Montserrat:400,700" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="{{#linkTo}}/css/bootstrap.min.css{{/linkTo}}"/>
     <link rel="stylesheet" href="{{#linkTo}}/css/bootstrap-theme.min.css{{/linkTo}}"/>
@@ -14,7 +14,7 @@
     <div class="container-fluid">
         <div class="row start-header">
             <div class="container">
-                <h1>Spring Initializr <small>bootstrap your application now</small></h1>
+                <h1>The Dev Portal<small>bootstrap your component based application</small></h1>
             </div>
         </div>
         <div class="container start-main">
@@ -33,7 +33,9 @@
                             {{/bootVersions.content}}
                         </select>
                     </h2>
+                    
                 </div>
+                <h3>Require Git Repo?<input type="checkbox" id="initGit" name="initGit" tabindex="2"></h3>
             </div>
 
             <input id="baseDir" name="baseDir" type="hidden" value="{{artifactId.content}}">
@@ -96,10 +98,21 @@
                         </select>
                     </div>
                 </div>
+                  <!-- begin custom stuff -->
+                    <div class="form-group">
+                        <label for="archetypes" class="control-label">Select a Starter Archetype</label>
+                        <select id="archetypes">
+                            <option value="NONE">Ad hoc</option>
+                            <option value="REST">Microservice (REST)</option>
+                            <option value="FOO">Foo</option>
+                            <option value="BAR">Bar</option>
+                        </select>
+                    </div>
+                    <!-- end custom stuff -->
                 <div class="col-sm-12 col-md-6">
                     <h2>Dependencies</h2>
 
-                    <p>Add Spring Boot Starters and dependencies to your application</p>
+                    <p>Add Component Starters and dependencies to your application</p>
 
                     <div class="form-group">
                         <label for="autocomplete" class="control-label">Search for dependencies</label>
@@ -161,8 +174,8 @@
 </form>
 <footer>
     <div class="container">
-        <p>start.spring.io is powered by <a href="https://github.com/spring-io/initializr/">Spring Initializr</a>
-            and <a href="https://run.pivotal.io">Pivotal Web Services</a></p>
+        <p>xavient.dev.portal.com is powered by <a href="https://github.com/spring-io/initializr/"></a>
+             <a href="https://run.pivotal.io">Xavient R & D Services</a></p>
     </div>
 </footer>
 <script src="{{#linkTo}}/js/jquery-3.1.1.min.js{{/linkTo}}"></script>
